2009-03-30  Till Kamppeter <till.kamppeter@gmail.com>

	* foomaticrip.c, options.c: If there are printing system options
	  (like "media" of CUPS) and PPD options (like "PageSize") on the
	  command line and they do the same thing (like choosing the paper
	  size) let the setting of the PPD option always have priority,
	  as this is expected for a CUPS filter (see CUPS STR #3148). This 
	  is done by treating the printing system options before the PPD
	  options. This fixes Ubuntu bug #338999.

2009-03-08  Till Kamppeter <till.kamppeter@gmail.com>

	* renderer.c: Fixed segmentation fault in JCL option handling (bugs
	  #311 and #317).

2009-03-07  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-rip.1.in: Fixed typos.

	* renderer.c: When doing the massaging of the remderer command line
	  foomatic-rip inserts 'gs' at the wrong place in command lines of
	  Foomatic 3.x-generated PPD files for the "Postscript" driver, leading
	  to duplicate calls of Ghostscript (bug #316).

	* foomaticrip.c: Fixed buffer overflow mentioned in bug #311.

2009-02-11  Lars Uebernickel <larsuebernickel@gmx.de>
	* foomaticrip.c: The value of the "execpath" variable in the config
	file was not used fully: Only the characters leading up to the first
	':' were copied into the programs $PATH environment variable.

2009-02-11  Lars Uebernickel <larsuebernickel@gmx.de>
	* renderer.c: Fixed several bugs in the argument replacements in
	massage_gs_commandline.
	* foomaticrip.c: Use "gspath" and "echopath" from the config file.

2009-02-09  Lars Uebernickel <larsuebernickel@gmx.de>

	* fileconverter.h, foomaticrip.c, renderer.c, util.c: Made
	  foomatic-rip building under Mac OS X, mainly by replacing
	  functions which are GNU-only.

2009-02-02  Till Kamppeter <till.kamppeter@gmail.com>

	* renderer.c: When foomatic-rip looked for JCL options in the
	  binary output of the driver to merge them with JCL options from
	  the PPD file, it read binary data into a C string, which causes